--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
 target/
-.idea/
-.DS_Store
+boot/
+lib_managed/
+src_managed/
+project/plugins/project/
+/.idea/
+/project/target/
+/src/main/g8/target/
+/project/project/
 
-# Visual Studio Code
-.bloop/
-.metals/
-.vscode/
-project/metals.sbt
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+project/boot/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+# ENSIME specific
+.ensime_cache/
+.ensime
+/src/main/g8/project/target/
